tests/fixtures/syntax/invalid/document_file_order_string_literal.repor
# `order` accepts only a bare non-negative integer, mirroring `exit`;
# a string literal fails at parse time.
document file {
  order "20"
}
